prepare for publication

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -31,16 +31,26 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 files = /etc/supervisor/conf.d/*.conf
 
 [program:config]
-command=perl -pi -e "s/{GCS_BUCKET}/$GCP_BUCKET/"  /etc/nginx/sites-enabled/default
+command=perl -pi -e 's/{GCS_BUCKET}/%(ENV_GCS_BUCKET)s/'  /etc/nginx/sites-enabled/default
 autostart=true
 autorestart=false
 prioriy=1
+exitcodes=0
+
+[program:init]
+command=sh -c "gcloud auth application-default print-access-token > /tmp/token.new && mv /tmp/token.new /tmp/token"
+autostart=true
+autorestart=false
+prioriy=5
+exitcodes=0
 
 [program:cron]
-command=cron
+command=cron -f
 prioriy=10
 autostart=true
 autorestart=true
+redirect_stderr=true
+stdout_logfile=/dev/stdout
 
 [program:nginx]
 command=nginx -g 'daemon off;'
