prevent cron output

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -32,16 +32,16 @@ files = /etc/supervisor/conf.d/*.conf
 
 [program:config]
 command=perl -pi -e 's/{GCS_BUCKET}/%(ENV_GCS_BUCKET)s/' /etc/nginx/sites-enabled/default
+prioriy=1
 autostart=true
 autorestart=false
-prioriy=1
 exitcodes=0
 
 [program:init]
 command=sh -c "gcloud auth application-default print-access-token > /tmp/token.new && mv /tmp/token.new /tmp/token"
+prioriy=5
 autostart=true
 autorestart=false
-prioriy=5
 exitcodes=0
 
 [program:cron]
@@ -51,12 +51,15 @@ autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 
 [program:nginx]
 command=nginx -g 'daemon off;'
+prioriy=20
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-prioriy=20
